added group type permission endpoints
