# src/entities/acess-group-permission-type-entity.ts
@@ -1,0 +1,4 @@
+export default interface AccessGroupPermissionTypeEntity {
+    id_grupo?: number,
+    id_tipo_permissao?: number,
+}
