# src/models/access-group-permission-type-model.ts
@@ -1,0 +1,4 @@
+export default interface AccessGroupPermissionType {
+    idGroup?: number,
+    idPermissionType?: number,
+}
